add a more informative error when there are no converged starts in CI

--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -403,7 +403,10 @@
     "        optimizer=pypesto_optimizer,\n",
     "        engine=pypesto_engine,\n",
     "        result=pypesto_result,\n",
-    "    )"
+    "    )\n",
+    "    pypesto_result.optimize_result.sort()\n",
+    "    if pypesto_result.optimize_result.x[0] is None:\n",
+    "        raise Exception(\"All multistarts failed (n_starts is probably too small)! If this error occurred during CI, just run the workflow again.\")"
    ]
   },
   {
@@ -925,6 +928,9 @@
     "            engine=pypesto_engine,\n",
     "            result=regresult,\n",
     "        )\n",
+    "        regresult.optimize_result.sort()\n",
+    "        if regresult.optimize_result.x[0] is None:\n",
+    "            raise Exception(\"All multistarts failed (n_starts is probably too small)! If this error occurred during CI, just run the workflow again.\")\n",
     "    \n",
     "    # Save results to disk\n",
     "    # pypesto.store.write_result(regresult, f'{name}.h5', overwrite=True)\n",
@@ -1474,6 +1480,9 @@
     "            engine=pypesto_engine,\n",
     "            result=regresult,\n",
     "        )\n",
+    "        regresult.optimize_result.sort()\n",
+    "        if regresult.optimize_result.x[0] is None:\n",
+    "            raise Exception(\"All multistarts failed (n_starts is probably too small)! If this error occurred during CI, just run the workflow again.\")\n",
     "    \n",
     "    # Save results to disk\n",
     "    # pypesto.store.write_result(regresult, f'{name}.h5', overwrite=True)\n",
@@ -1827,7 +1836,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n### 5 nodes, FD\n",
+      "\n",
+      "### 5 nodes, FD\n",
       "k1 = 0.29531740929189587\n",
       "k2 = 4.999999999980607\n",
       "k3 = -0.9790519905642098\n",
@@ -1841,7 +1851,8 @@
       "derivative_log_pEpoR_t5 = 0.29714675365344717\n",
       "derivative_log_pEpoR_t10 = -0.015093362714338546\n",
       "derivative_log_pEpoR_t20 = -0.133809995895698\n",
-      "\n### 15 nodes, FD\n",
+      "\n",
+      "### 15 nodes, FD\n",
       "k1 = 0.23089033845293164\n",
       "k2 = -1.0430934471453939\n",
       "k3 = -0.20546496571840386\n",
@@ -1866,7 +1877,8 @@
       "derivative_log_pEpoR_t40 = -0.23120622854751316\n",
       "derivative_log_pEpoR_t50 = -0.11164514351604968\n",
       "regularization_strength = 1.7781512503836436\n",
-      "\n### 5 nodes\n",
+      "\n",
+      "### 5 nodes\n",
       "k1 = 0.33043591042049714\n",
       "k2 = 4.999999994330676\n",
       "k3 = -1.0333058772360495\n",
