--- a/python/examples/example_jax/ExampleJax.ipynb
+++ b/python/examples/example_jax/ExampleJax.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Overview\n",
-    "The purpose of this guide is to showcase how AMICI can be combined with differentiable programming in JAX. We will do so by reimplementing the parameter transformations available in AMICI in JAX and comparing it to the native implementation."
+    "The purpose of this guide is to showcase how AMICI can be combined with differentiable programming in [JAX](https://jax.readthedocs.io/en/latest/index.html). We will do so by reimplementing the parameter transformations available in AMICI in JAX and comparing it to the native implementation."
    ]
   },
   {
@@ -35,7 +35,7 @@
    "id": "8552f123",
    "metadata": {},
    "source": [
-    "From the benchmark collection, we now import the Boehm model."
+    "From the benchmark collection, we now import the Böhm model."
    ]
   },
   {
@@ -300,8 +300,6 @@
     "        petab_problem, \n",
     "        amici_model, \n",
     "        problem_parameters=dict(zip(petab_problem.x_free_ids, parameters)),\n",
-    "        scaled_gradients=True,\n",
-    "        scaled_parameters=True,\n",
     "        solver=amici_solver,\n",
     "    )"
    ]
@@ -411,8 +409,8 @@
     "def jax_objective_with_parameter_transform(parameters: jnp.array):\n",
     "    par_scaled = jnp.asarray(tuple(\n",
     "        value if scale == petab.LIN\n",
-    "        else jnp.log(value) if scale == petab.LOG\n",
-    "        else jnp.log10(value)\n",
+    "        else jnp.exp(value) if scale == petab.LOG\n",
+    "        else jnp.power(10, value)\n",
     "        for value, scale in zip(parameters, parameter_scales)\n",
     "    ))\n",
     "    return jax_objective(par_scaled)\n"
@@ -431,11 +429,23 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "b7e9ff3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = dict(zip(petab_problem.x_free_ids, petab_problem.x_nominal_free))\n",
+    "scaled_parameters = petab_problem.scale_parameters(parameters)\n",
+    "scaled_parameters_np = np.asarray(list(scaled_parameters.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "fb3085a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(petab_problem.x_nominal_free)"
+    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(scaled_parameters_np)"
    ]
   },
   {
@@ -453,20 +463,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters = dict(zip(petab_problem.x_free_ids, petab_problem.x_nominal_free))\n",
-    "scaled_parameters = petab_problem.scale_parameters(parameters)\n",
     "r = simulate_petab(\n",
     "    petab_problem, \n",
     "    amici_model, \n",
     "    solver=amici_solver,\n",
     "    scaled_parameters=True,\n",
+    "    scaled_gradients=True,\n",
     "    problem_parameters=scaled_parameters\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "2628db12",
    "metadata": {},
    "outputs": [
@@ -512,7 +521,7 @@
        "llh -138.221997 -138.222 -2.135248e-08"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0846523f",
    "metadata": {},
    "outputs": [
@@ -557,76 +566,76 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Epo_degradation_BaF3</th>\n",
-       "      <td>-3.548166e-01</td>\n",
-       "      <td>-3.640576e-01</td>\n",
-       "      <td>-2.538330e-02</td>\n",
+       "      <td>-0.022045</td>\n",
+       "      <td>-0.022034</td>\n",
+       "      <td>4.645833e-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_exp_hetero</th>\n",
-       "      <td>-2.401005e+03</td>\n",
-       "      <td>-2.401011e+03</td>\n",
-       "      <td>-2.576290e-06</td>\n",
+       "      <td>-0.055323</td>\n",
+       "      <td>-0.055323</td>\n",
+       "      <td>8.646725e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_exp_homo</th>\n",
-       "      <td>-4.074567e-01</td>\n",
-       "      <td>-4.107312e-01</td>\n",
-       "      <td>-7.972314e-03</td>\n",
+       "      <td>-0.005789</td>\n",
+       "      <td>-0.005801</td>\n",
+       "      <td>-2.013520e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_imp_hetero</th>\n",
-       "      <td>-1.436442e-01</td>\n",
-       "      <td>-1.639387e-01</td>\n",
-       "      <td>-1.237929e-01</td>\n",
+       "      <td>-0.005414</td>\n",
+       "      <td>-0.005403</td>\n",
+       "      <td>1.973517e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_imp_homo</th>\n",
-       "      <td>2.006412e-10</td>\n",
-       "      <td>2.006412e-10</td>\n",
-       "      <td>6.106477e-08</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>1.119566e-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_phos</th>\n",
-       "      <td>-2.177959e-07</td>\n",
-       "      <td>-2.088099e-07</td>\n",
-       "      <td>4.303429e-02</td>\n",
+       "      <td>-0.007907</td>\n",
+       "      <td>-0.007794</td>\n",
+       "      <td>1.447768e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sd_pSTAT5A_rel</th>\n",
-       "      <td>-1.215673e-03</td>\n",
-       "      <td>-1.222761e-03</td>\n",
-       "      <td>-5.796647e-03</td>\n",
+       "      <td>-0.010784</td>\n",
+       "      <td>-0.010800</td>\n",
+       "      <td>-1.469604e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sd_pSTAT5B_rel</th>\n",
-       "      <td>-1.583700e-03</td>\n",
-       "      <td>-1.580832e-03</td>\n",
-       "      <td>1.814714e-03</td>\n",
+       "      <td>-0.024037</td>\n",
+       "      <td>-0.024037</td>\n",
+       "      <td>-8.729860e-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sd_rSTAT5A_rel</th>\n",
-       "      <td>-2.643666e-03</td>\n",
-       "      <td>-2.641327e-03</td>\n",
-       "      <td>8.856053e-04</td>\n",
+       "      <td>-0.019191</td>\n",
+       "      <td>-0.019186</td>\n",
+       "      <td>2.829431e-04</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             amici           jax      rel_diff\n",
-       "Epo_degradation_BaF3 -3.548166e-01 -3.640576e-01 -2.538330e-02\n",
-       "k_exp_hetero         -2.401005e+03 -2.401011e+03 -2.576290e-06\n",
-       "k_exp_homo           -4.074567e-01 -4.107312e-01 -7.972314e-03\n",
-       "k_imp_hetero         -1.436442e-01 -1.639387e-01 -1.237929e-01\n",
-       "k_imp_homo            2.006412e-10  2.006412e-10  6.106477e-08\n",
-       "k_phos               -2.177959e-07 -2.088099e-07  4.303429e-02\n",
-       "sd_pSTAT5A_rel       -1.215673e-03 -1.222761e-03 -5.796647e-03\n",
-       "sd_pSTAT5B_rel       -1.583700e-03 -1.580832e-03  1.814714e-03\n",
-       "sd_rSTAT5A_rel       -2.643666e-03 -2.641327e-03  8.856053e-04"
+       "                         amici       jax      rel_diff\n",
+       "Epo_degradation_BaF3 -0.022045 -0.022034  4.645833e-04\n",
+       "k_exp_hetero         -0.055323 -0.055323  8.646725e-08\n",
+       "k_exp_homo           -0.005789 -0.005801 -2.013520e-03\n",
+       "k_imp_hetero         -0.005414 -0.005403  1.973517e-03\n",
+       "k_imp_homo            0.000045  0.000045  1.119566e-06\n",
+       "k_phos               -0.007907 -0.007794  1.447768e-02\n",
+       "sd_pSTAT5A_rel       -0.010784 -0.010800 -1.469604e-03\n",
+       "sd_pSTAT5B_rel       -0.024037 -0.024037 -8.729860e-06\n",
+       "sd_rSTAT5A_rel       -0.019191 -0.019186  2.829431e-04"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,19 +652,19 @@
    "id": "4b00dcb2",
    "metadata": {},
    "source": [
-    "We see quite some differences in the gradient calculation, with over to 10% error for `k_imp_hetero`. The primary reason is that running JAX in default configuration will use float32 precision for the parameters that are passed to AMICI, which uses float64, and the derivative of the parameter transformation.\n",
+    "We see quite some differences in the gradient calculation, with over to 1% error for `k_phos`. The primary reason is that running JAX in default configuration will use float32 precision for the parameters that are passed to AMICI, which uses float64, and the derivative of the parameter transformation.\n",
     "As AMICI simulations that run on the CPU are the most expensive operation, there is barely any tradeoff for using float32 vs. float64 in JAX. Therefore, we configure JAX to use float64 instead and rerun simulations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "5f81c693",
    "metadata": {},
    "outputs": [],
    "source": [
     "jax.config.update(\"jax_enable_x64\", True)\n",
-    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(petab_problem.x_nominal_free)"
+    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(scaled_parameters_np)"
    ]
   },
   {
@@ -663,12 +672,12 @@
    "id": "ab39311d",
    "metadata": {},
    "source": [
-    "We can now evaluate the results again and see that differences between pure AMICI and AMICI/JAX implementations are now much smaller (~1e-3)."
+    "We can now evaluate the results again and see that differences between pure AMICI and AMICI/JAX implementations have now disappeared."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "25e8b301",
    "metadata": {},
    "outputs": [
@@ -702,19 +711,19 @@
        "    <tr>\n",
        "      <th>llh</th>\n",
        "      <td>-138.221997</td>\n",
-       "      <td>-138.221996</td>\n",
-       "      <td>7.937731e-09</td>\n",
+       "      <td>-138.221997</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          amici         jax      rel_diff\n",
-       "llh -138.221997 -138.221996  7.937731e-09"
+       "          amici         jax  rel_diff\n",
+       "llh -138.221997 -138.221997      -0.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "f31a3927",
    "metadata": {},
    "outputs": [
@@ -758,76 +767,76 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Epo_degradation_BaF3</th>\n",
-       "      <td>-3.548166e-01</td>\n",
-       "      <td>-3.547989e-01</td>\n",
-       "      <td>5.003352e-05</td>\n",
+       "      <td>-0.022045</td>\n",
+       "      <td>-0.022045</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_exp_hetero</th>\n",
-       "      <td>-2.401005e+03</td>\n",
-       "      <td>-2.401004e+03</td>\n",
-       "      <td>9.391345e-08</td>\n",
+       "      <td>-0.055323</td>\n",
+       "      <td>-0.055323</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_exp_homo</th>\n",
-       "      <td>-4.074567e-01</td>\n",
-       "      <td>-4.073810e-01</td>\n",
-       "      <td>1.859080e-04</td>\n",
+       "      <td>-0.005789</td>\n",
+       "      <td>-0.005789</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_imp_hetero</th>\n",
-       "      <td>-1.436442e-01</td>\n",
-       "      <td>-1.435541e-01</td>\n",
-       "      <td>6.280789e-04</td>\n",
+       "      <td>-0.005414</td>\n",
+       "      <td>-0.005414</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_imp_homo</th>\n",
-       "      <td>2.006412e-10</td>\n",
-       "      <td>2.006412e-10</td>\n",
-       "      <td>-4.329354e-09</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_phos</th>\n",
-       "      <td>-2.177959e-07</td>\n",
-       "      <td>-2.180151e-07</td>\n",
-       "      <td>-1.005529e-03</td>\n",
+       "      <td>-0.007907</td>\n",
+       "      <td>-0.007907</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sd_pSTAT5A_rel</th>\n",
-       "      <td>-1.215673e-03</td>\n",
-       "      <td>-1.215934e-03</td>\n",
-       "      <td>-2.144430e-04</td>\n",
+       "      <td>-0.010784</td>\n",
+       "      <td>-0.010784</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sd_pSTAT5B_rel</th>\n",
-       "      <td>-1.583700e-03</td>\n",
-       "      <td>-1.583841e-03</td>\n",
-       "      <td>-8.873612e-05</td>\n",
+       "      <td>-0.024037</td>\n",
+       "      <td>-0.024037</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sd_rSTAT5A_rel</th>\n",
-       "      <td>-2.643666e-03</td>\n",
-       "      <td>-2.643750e-03</td>\n",
-       "      <td>-3.159974e-05</td>\n",
+       "      <td>-0.019191</td>\n",
+       "      <td>-0.019191</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             amici           jax      rel_diff\n",
-       "Epo_degradation_BaF3 -3.548166e-01 -3.547989e-01  5.003352e-05\n",
-       "k_exp_hetero         -2.401005e+03 -2.401004e+03  9.391345e-08\n",
-       "k_exp_homo           -4.074567e-01 -4.073810e-01  1.859080e-04\n",
-       "k_imp_hetero         -1.436442e-01 -1.435541e-01  6.280789e-04\n",
-       "k_imp_homo            2.006412e-10  2.006412e-10 -4.329354e-09\n",
-       "k_phos               -2.177959e-07 -2.180151e-07 -1.005529e-03\n",
-       "sd_pSTAT5A_rel       -1.215673e-03 -1.215934e-03 -2.144430e-04\n",
-       "sd_pSTAT5B_rel       -1.583700e-03 -1.583841e-03 -8.873612e-05\n",
-       "sd_rSTAT5A_rel       -2.643666e-03 -2.643750e-03 -3.159974e-05"
+       "                         amici       jax  rel_diff\n",
+       "Epo_degradation_BaF3 -0.022045 -0.022045      -0.0\n",
+       "k_exp_hetero         -0.055323 -0.055323      -0.0\n",
+       "k_exp_homo           -0.005789 -0.005789      -0.0\n",
+       "k_imp_hetero         -0.005414 -0.005414      -0.0\n",
+       "k_imp_homo            0.000045  0.000045       0.0\n",
+       "k_phos               -0.007907 -0.007907      -0.0\n",
+       "sd_pSTAT5A_rel       -0.010784 -0.010784      -0.0\n",
+       "sd_pSTAT5B_rel       -0.024037 -0.024037      -0.0\n",
+       "sd_rSTAT5A_rel       -0.019191 -0.019191      -0.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
