--- a/binder/overview.ipynb
+++ b/binder/overview.ipynb
@@ -29,7 +29,11 @@
     "\n",
     "* [Simulation errors](../python/examples/example_errors.ipynb)\n",
     "\n",
-    "  Demonstrates common simulation failures and gives some hints for interpreting, debugging, and fixing them.\n"
+    "  Demonstrates common simulation failures and gives some hints for interpreting, debugging, and fixing them.\n",
+    "\n",
+    "* [Interfacing JAX](../python/examples/example_jax/ExampleJax.ipynb)\n",
+    "\n",
+    "  Provides guidance on how to combine AMICI with differential programming frameworks such as JAX.\n"
    ]
   }
  ],
