--- a/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
+++ b/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
@@ -77,7 +77,9 @@
     "$$\n",
     "It's easy to see that the first two columns (or the second and the third row) are linearly dependent and the determinant is equal to zero.\n",
     "\n",
-    "If one is able to identify a conserved quantity, the model dimension can be reduced by excluding one of the states. For example, for the model above one can remove the second ODE and redefine `e` as `enzyme_total - c`, where `enzyme_total` is a constant specifying the total concentration of enzyme. In general, conserved quantities or conserved moieties are functions of the sates of the dynamical system that remain constant over time. They can be automatically removed in the SBML import of AMICI, if an environment variable ``AMICI_EXPERIMENTAL_SBML_NONCONST_CLS`` is set. Further, we will consider two versions of the model, with and without the conserved quantity, to demonstrate the failure of the Newton's method for steady-state computation and two different approaches for sensitivities computation that are not applicable if Jacobian is singular."
+    "If one is able to identify a conserved quantity, the model dimension can be reduced by excluding one of the states. For example, for the model above one can remove the second ODE and redefine `e` as `enzyme_total - c`, where `enzyme_total` is a constant specifying the total concentration of enzyme. In general, conserved quantities or conserved moieties are functions of the sates of the dynamical system that remain constant over time. They can be automatically removed in the SBML import of AMICI, if an environment variable ``AMICI_EXPERIMENTAL_SBML_NONCONST_CLS`` is set, using a heuristic-based conserved moieties identification approach presented in [De Martino et al. (2014)](https://doi.org/10.1371/journal.pone.0100750). \n",
+    "\n",
+    "Further, we will consider two versions of the model, with and without the conserved quantity, to demonstrate the failure of the Newton's method for steady-state computation and two different approaches for sensitivities computation that are not applicable if Jacobian is singular."
    ]
   },
   {
@@ -317,7 +319,7 @@
       " posteq_numsteps: [[  0 463   0]]\n",
       "posteq_numstepsB: 0.0\n",
       "   posteq_status: [[-3  1  0]]\n",
-      " posteq_cpu_time: 4.62\n",
+      " posteq_cpu_time: 1.756\n",
       "posteq_cpu_timeB: 0.0\n"
      ]
     }
@@ -344,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The 'x' value contains state values corresponding to the time points that were set for the model simulation. In this case, it is the state values at $t=\\infty$, i.e. the steady state. One can also see that `xdot` values are equal to zero or very small, which means that the steady-state condition ($\\dot{x} = 0$) is fulfilled. \n",
+    "The 'x' value contains state values corresponding to the time points that were set for the model simulation. In this case, it is the state values at $t=\\infty$, i.e. the steady state. One can also see that `xdot` values are equal to zero or very small, which means that the steady-state condition ($\\dot{x} = 0$) is fulfilled. The actual weighted root-mean-square of the right-hand side when steady state was reached is reported in `posteq_wrms`. \n",
     "\n",
     "The fields `posteq_status` and `posteq_numsteps` in rdata tell us how post-equilibration worked. In both arrays each entry is, respectively, the status or the number of steps taken for\n",
     "\n",
@@ -387,6 +389,7 @@
     }
    ],
    "source": [
+    "# steady state value found by pre-equilibration\n",
     "steady_state = rdata['x'][0]\n",
     "\n",
     "timepoints = np.linspace(0, 14, 200)\n",
@@ -414,13 +417,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-12 21:42:04.358 - amici.swig_wrappers - DEBUG - [EQUILIBRATION_FAILURE] AMICI equilibration exceeded maximum number of integration steps at t=0.0210298.\n",
-      "2023-04-12 21:42:04.359 - amici.swig_wrappers - ERROR - [OTHER] AMICI simulation failed: Steady state computation failed. First run of Newton solver failed: RHS could not be factorized. Simulation to steady state failed: No convergence was achieved. Second run of Newton solver failed: RHS could not be factorized.\n",
-      "2023-04-12 21:42:04.359 - amici.swig_wrappers - DEBUG - [BACKTRACE] The previous error occurred at:\n",
-      "2       0x7f2a04432beb /home/polina/Documents/Development/AMICI/venv_amici/lib/python3.10/site-packages/amici/_amici.cpython-310-x86_64-linux-gnu.so(+0xb3beb) [0x7f2a04432beb]\n",
-      "3       0x7f2a04551e62 amici::SteadystateProblem::findSteadyState(amici::Solver const&, amici::Model&, int) + 402\n",
-      "4       0x7f2a04551eaf amici::SteadystateProblem::workSteadyStateProblem(amici::Solver const&, amici::Model&, int) + 63\n",
-      "5       0x7f2a044f9e1e amici::runAmiciSimulation(amici::Solver&, amici::ExpData const*, a\n"
+      "2023-05-10 18:11:30.384 - amici.swig_wrappers - DEBUG - [EQUILIBRATION_FAILURE] AMICI equilibration exceeded maximum number of integration steps at t=0.0210298.\n",
+      "2023-05-10 18:11:30.386 - amici.swig_wrappers - ERROR - [OTHER] AMICI simulation failed: Steady state computation failed. First run of Newton solver failed: RHS could not be factorized. Simulation to steady state failed: No convergence was achieved. Second run of Newton solver failed: RHS could not be factorized.\n",
+      "2023-05-10 18:11:30.387 - amici.swig_wrappers - DEBUG - [BACKTRACE] The previous error occurred at:\n",
+      "2       0x7fbf006fdbeb /home/polina/Documents/Development/AMICI/venv_amici/lib/python3.10/site-packages/amici/_amici.cpython-310-x86_64-linux-gnu.so(+0xb3beb) [0x7fbf006fdbeb]\n",
+      "3       0x7fbf0081ce62 amici::SteadystateProblem::findSteadyState(amici::Solver const&, amici::Model&, int) + 402\n",
+      "4       0x7fbf0081ceaf amici::SteadystateProblem::workSteadyStateProblem(amici::Solver const&, amici::Model&, int) + 63\n",
+      "5       0x7fbf007c4e1e amici::runAmiciSimulation(amici::Solver&, amici::ExpData const*, a\n"
      ]
     },
     {
@@ -504,6 +507,7 @@
     "                      np.array([0., 0.1, 1.]))\n",
     "edata.setObservedData([1.8] * 6)\n",
     "edata.fixedParameters = np.array([3., 5.])\n",
+    "# set parameters for pre-equilibration\n",
     "edata.fixedParametersPreequilibration = np.array([0., 2.])\n",
     "edata.reinitializeFixedParameterInitialStates = True"
    ]
@@ -592,7 +596,9 @@
    "source": [
     "## Sensitivities computation at steady state <a name=\"steady-state_sensitivities\"></a>\n",
     "\n",
-    "In addition to model simulation, AMICI supports forward sensitivity analysis and adjoint sensitivity analysis for likelihood-based output functions, which is crucial for parameter estimation. Both sensitivity analysis approaches can be adapted to exploit steady-state constraints.\n",
+    "In addition to model simulation, AMICI supports forward sensitivity analysis and adjoint sensitivity analysis for likelihood-based output functions, which is crucial for parameter estimation. Both sensitivity analysis approaches can be adapted to exploit steady-state constraints and to compute sensitivities by solving a linear system. In this section we consider these approaches, their applicability and available settings.\n",
+    "\n",
+    "![amici_logic_sensitivities_at_stst.svg](figures/amici_logic_sensitivities_at_stst.svg)\n",
     "\n",
     "### Post-equilibration with sensitivities <a name=\"posteq_sensitivities\"></a>\n",
     "\n",
@@ -603,11 +609,13 @@
     "If forward sensitivity analysis is used, then state sensitivities at the timepoint `np.inf` will be computed. This can be done in (currently) two different ways:\n",
     "\n",
     "1. One can integrate the state variables with state sensitivities until the norm of the right-hand side becomes small. This approach is numerically more stable, but the computation time for large models may be substantial.\n",
-    "<!-- This approach will be chosen by AMICI, if the steady state was found by simulation and the option `model.SteadyStateSensitivityMode` is set to `SteadyStateSensitivityMode.simulationFSA`.  -->\n",
+    "\n",
     "\n",
     "2. The more efficient approach is to take into account the steady-state condition ($\\dot{x} = 0$), which allows to symplify the ODE system for state sentitivities into the linear system of equations: $$0 = \\left.\\dot{\\mathbf{s}}^x\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})} = \\mathbf{J}(\\mathbf{x}^*({\\theta}), {\\theta}) \\left.\\mathbf{s}^x\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})} + \\left.\\frac{\\partial \\mathbf{f}}{\\partial \\theta}\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})}\\qquad \\Rightarrow \\qquad \\mathbf{J}(\\mathbf{x}^*({\\theta}), {\\theta}) \\left.\\mathbf{s}^x\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})} = - \\left.\\frac{\\partial \\mathbf{f}}{\\partial \\theta}\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})},$$ where $\\mathbf{s}^x$ are the state sensitivies, $\\mathbf{f}$ - is the right-hand side of the model ODEs, $\\theta$ - model parameters and $\\mathbf{J}(\\mathbf{x}^*({\\theta}), {\\theta}) = \\left.\\nabla_x \\mathbf{f}\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})}$ is the systems's Jacobian at steady state. However, this method is only applicable if the Jacobian is not (close to) singular.\n",
     "\n",
-    "   This approach will always be chosen by AMICI, if the option `model.SteadyStateSensitivityMode` is set to `SteadyStateSensitivityMode.newtonOnly`. Furthermore, it will also be chosen, if the steady state was found by Newton's method, as in this case, the Jacobian is at least not singular (but may still be poorly conditioned). \n",
+    "\n",
+    "<!-- This approach will be chosen by AMICI, if the steady state was found by simulation and the option `model.SteadyStateSensitivityMode` is set to `SteadyStateSensitivityMode.simulationFSA`.  -->\n",
+    "This approach will always be chosen by AMICI, if the option `model.SteadyStateSensitivityMode` is set to `SteadyStateSensitivityMode.newtonOnly`. Furthermore, it will also be chosen, if the steady state was found by Newton's method, as in this case, the Jacobian is at least not singular (but may still be poorly conditioned). \n",
     "<!--    A check for the condition number of the Jacobian is currently missing, but will soon be implemented. -->\n",
     "\n",
     "Side remark:\n",
@@ -690,12 +698,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-12 21:42:05.040 - amici.swig_wrappers - ERROR - [OTHER] AMICI simulation failed: Steady state sensitivity computation failed due to unsuccessful factorization of RHS Jacobian\n",
-      "2023-04-12 21:42:05.041 - amici.swig_wrappers - DEBUG - [BACKTRACE] The previous error occurred at:\n",
-      "2       0x7f2a04433421 /home/polina/Documents/Development/AMICI/venv_amici/lib/python3.10/site-packages/amici/_amici.cpython-310-x86_64-linux-gnu.so(+0xb4421) [0x7f2a04433421]\n",
-      "3       0x7f2a044f9e1e amici::runAmiciSimulation(amici::Solver&, amici::ExpData const*, amici::Model&, bool) + 4062\n",
-      "4       0x7f2a044989f5 /home/polina/Documents/Development/AMICI/venv_amici/lib/python3.10/site-packages/amici/_amici.cpython-310-x86_64-linux-gnu.so(+0x1199f5) [0x7f2a044989f5]\n",
-      "5       0x56339b0109c8 /home/p\n"
+      "2023-05-10 18:11:40.332 - amici.swig_wrappers - ERROR - [OTHER] AMICI simulation failed: Steady state sensitivity computation failed due to unsuccessful factorization of RHS Jacobian\n",
+      "2023-05-10 18:11:40.333 - amici.swig_wrappers - DEBUG - [BACKTRACE] The previous error occurred at:\n",
+      "2       0x7fbf006fe421 /home/polina/Documents/Development/AMICI/venv_amici/lib/python3.10/site-packages/amici/_amici.cpython-310-x86_64-linux-gnu.so(+0xb4421) [0x7fbf006fe421]\n",
+      "3       0x7fbf007c4e1e amici::runAmiciSimulation(amici::Solver&, amici::ExpData const*, amici::Model&, bool) + 4062\n",
+      "4       0x7fbf007639f5 /home/polina/Documents/Development/AMICI/venv_amici/lib/python3.10/site-packages/amici/_amici.cpython-310-x86_64-linux-gnu.so(+0x1199f5) [0x7fbf007639f5]\n",
+      "5       0x558238f5a9c8 /home/p\n"
      ]
     },
     {
@@ -916,12 +924,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-12 21:42:05.091 - amici.swig_wrappers - ERROR - [OTHER] AMICI simulation failed: Steady state backward computation failed: Linear system could not be solved (possibly due to singular Jacobian), and numerical integration did not equilibrate within maxsteps\n",
-      "2023-04-12 21:42:05.092 - amici.swig_wrappers - DEBUG - [BACKTRACE] The previous error occurred at:\n",
-      "2       0x7f2a044330a4 /home/polina/Documents/Development/AMICI/venv_amici/lib/python3.10/site-packages/amici/_amici.cpython-310-x86_64-linux-gnu.so(+0xb40a4) [0x7f2a044330a4]\n",
-      "3       0x7f2a045516c6 amici::SteadystateProblem::workSteadyStateBackwardProblem(amici::Solver const&, amici::Model&, amici::BackwardProblem const*) + 54\n",
-      "4       0x7f2a044f9d56 amici::runAmiciSimulation(amici::Solver&, amici::ExpData const*, amici::Model&, bool) + 3862\n",
-      "5       0x7f2a044989f5 /home/polina/Documents/Develop\n"
+      "2023-05-10 18:11:46.254 - amici.swig_wrappers - ERROR - [OTHER] AMICI simulation failed: Steady state backward computation failed: Linear system could not be solved (possibly due to singular Jacobian), and numerical integration did not equilibrate within maxsteps\n",
+      "2023-05-10 18:11:46.255 - amici.swig_wrappers - DEBUG - [BACKTRACE] The previous error occurred at:\n",
+      "2       0x7fbf006fe0a4 /home/polina/Documents/Development/AMICI/venv_amici/lib/python3.10/site-packages/amici/_amici.cpython-310-x86_64-linux-gnu.so(+0xb40a4) [0x7fbf006fe0a4]\n",
+      "3       0x7fbf0081c6c6 amici::SteadystateProblem::workSteadyStateBackwardProblem(amici::Solver const&, amici::Model&, amici::BackwardProblem const*) + 54\n",
+      "4       0x7fbf007c4d56 amici::runAmiciSimulation(amici::Solver&, amici::ExpData const*, amici::Model&, bool) + 3862\n",
+      "5       0x7fbf007639f5 /home/polina/Documents/Develop\n"
      ]
     },
     {
@@ -1256,32 +1264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "ODE solver steps, which were necessary to reach steady state:\n",
-      "lax tolerances:  [[0 0 0]]\n",
-      "strict tolerances:  [[0 0 0]]\n",
-      "\n",
-      "simulation time corresponding to steady state:\n",
-      "nan\n",
-      "nan\n",
-      "\n",
-      "computation time to reach steady state:\n",
-      "0.0\n",
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Non-singular Jacobian, use simulaiton\n",
     "model_reduced.setSteadyStateSensitivityMode(amici.SteadyStateSensitivityMode.integrateIfNewtonFails)\n",
