--- a/binder/overview.ipynb
+++ b/binder/overview.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f7ebed12-4309-4c92-a54e-da80ccd2d5e7",
    "metadata": {},
@@ -34,6 +35,13 @@
     "* [Interfacing JAX](../python/examples/example_jax/ExampleJax.ipynb)\n",
     "\n",
     "  Provides guidance on how to combine AMICI with differential programming frameworks such as JAX.\n"
+    "* [Efficient spline interpolation](../python/examples/example_splines/ExampleSplines.ipynb)\n",
+    "\n",
+    "  Shows how to add annotated spline formulas to existing SBML models in order to speed up AMICI's model import.\n",
+    "\n",
+    "* [A real-world application of splines](../python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb)\n",
+    "\n",
+    "  An illustration of how to apply AMICI's spline functionalities to parameter estimation for a reaction network.\n"
    ]
   }
  ],
