CI: Increase number of starts in ExampleSplinesSwameye2003.ipynb
... as this fails too often.

--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "# If running as a Github action, just do the minimal amount of work required to check whether the code is working\n",
     "if os.getenv('GITHUB_ACTIONS') is not None:\n",
-    "    n_starts = 10\n",
+    "    n_starts = 15\n",
     "    pypesto_optimizer = pypesto.optimize.FidesOptimizer(verbose=logging.WARNING, options=dict(maxiter=10))\n",
     "    pypesto_engine = pypesto.engine.SingleCoreEngine()"
    ]
@@ -362,7 +362,7 @@
     "### Maximum Likelihood estimation\n",
     "Using pyPESTO we can optimize for the parameter vector that maximizes the probability of observing the experimental data (maximum likelihood estimation).\n",
     "\n",
-    "A multistart method with local gradient-based optimization is used and the results of each multistart can be visualized in a waterfall plot. "
+    "A multistart method with local gradient-based optimization is used and the results of each multistart can be visualized in a waterfall plot."
    ]
   },
   {
@@ -908,7 +908,7 @@
     "        np.log10(regstrength) # parameter is specified as log10 scale in PEtab\n",
     "    )\n",
     "    regproblem = copy.deepcopy(pypesto_problem)\n",
-    "    \n",
+    "\n",
     "    # Load existing results if available\n",
     "    if os.path.exists(f'{name}.h5'):\n",
     "        regresult = pypesto.store.read_result(f'{name}.h5', problem=regproblem)\n",
@@ -916,7 +916,7 @@
     "        regresult = None\n",
     "    # Overwrite\n",
     "    # regresult = None\n",
-    "    \n",
+    "\n",
     "    # Parallel multistart optimization with pyPESTO and FIDES\n",
     "    if n_starts > 0:\n",
     "        if regresult is None:\n",
@@ -935,10 +935,10 @@
     "        regresult.optimize_result.sort()\n",
     "        if regresult.optimize_result.x[0] is None:\n",
     "            raise Exception(\"All multistarts failed (n_starts is probably too small)! If this error occurred during CI, just run the workflow again.\")\n",
-    "    \n",
+    "\n",
     "    # Save results to disk\n",
     "    # pypesto.store.write_result(regresult, f'{name}.h5', overwrite=True)\n",
-    "    \n",
+    "\n",
     "    # Store result\n",
     "    regproblems[regstrength] = regproblem\n",
     "    regresults[regstrength] = regresult"
@@ -1469,7 +1469,7 @@
     "        np.log10(regstrength) # parameter is specified as log10 scale in PEtab\n",
     "    )\n",
     "    regproblem = copy.deepcopy(pypesto_problem)\n",
-    "    \n",
+    "\n",
     "    # Load existing results if available\n",
     "    if os.path.exists(f'{name}.h5'):\n",
     "        regresult = pypesto.store.read_result(f'{name}.h5', problem=regproblem)\n",
@@ -1477,7 +1477,7 @@
     "        regresult = None\n",
     "    # Overwrite\n",
     "    # regresult = None\n",
-    "    \n",
+    "\n",
     "    # Parallel multistart optimization with pyPESTO and FIDES\n",
     "    if n_starts > 0:\n",
     "        if regresult is None:\n",
@@ -1496,10 +1496,10 @@
     "        regresult.optimize_result.sort()\n",
     "        if regresult.optimize_result.x[0] is None:\n",
     "            raise Exception(\"All multistarts failed (n_starts is probably too small)! If this error occurred during CI, just run the workflow again.\")\n",
-    "    \n",
+    "\n",
     "    # Save results to disk\n",
     "    # pypesto.store.write_result(regresult, f'{name}.h5', overwrite=True)\n",
-    "    \n",
+    "\n",
     "    # Store result\n",
     "    regproblems[regstrength] = regproblem\n",
     "    regresults[regstrength] = regresult"
@@ -1934,7 +1934,7 @@
     "## Bibliography\n",
     "Schelker, M. et al. (2012). “Comprehensive estimation of input signals and dynamics in biochemical reaction networks”. In: Bioinformatics 28.18, pp. i529–i534. doi: [10.1093/bioinformatics/bts393](https://doi.org/10.1093/bioinformatics/bts393).\n",
     "\n",
-    "Swameye, I. et al. (2003). “Identification of nucleocytoplasmic cycling as a remote sensor in cellular signaling by databased modeling”. In: Proceedings of the National Academy of Sciences 100.3, pp. 1028–1033. doi: [10.1073/pnas.0237333100](https://doi.org/10.1073/pnas.0237333100)."
+    "Swameye, I. et al. (2003). “Identification of nucleocytoplasmic cycling as a remote sensor in cellular signaling by databased modeling”. In: Proceedings of the National Academy of Sciences 100.3, pp. 1028–1033. doi: [10.1073/pnas.0237333100](https://doi.org/10.1073/pnas.0237333100).\n"
    ]
   }
  ],
