--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -640,6 +640,7 @@
     "amici_solver = amici_model.getSolver()\n",
     "amici_solver.setSensitivityMethod(amici.SensitivityMethod.forward)\n",
     "amici_solver.setSensitivityOrder(amici.SensitivityOrder.first)\n",
+    "amici_model.setSteadyStateSensitivityMode(amici.SteadyStateSensitivityMode.newtonOnly)\n",
     "\n",
     "np.random.seed(2020)\n",
     "problem_parameters = dict(\n",
@@ -960,7 +961,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
