Increase maxSteps for ExampleSplinesSwameye2003.ipynb
Should avoid most `mxstep steps taken before reaching tout` failures (e.g. https://github.com/AMICI-dev/AMICI/actions/runs/5453350972/jobs/9922075162)

--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -351,7 +351,10 @@
    "outputs": [],
    "source": [
     "# Import PEtab problem into pyPESTO\n",
-    "pypesto_problem = pypesto.petab.PetabImporter(petab_problem, model_name=name).create_problem()"
+    "pypesto_problem = pypesto.petab.PetabImporter(petab_problem, model_name=name).create_problem()\n",
+    "\n",
+    "# Increase maximum number of steps for AMICI\n",
+    "pypesto_problem.objective.amici_solver.setMaxSteps(10**5)"
    ]
   },
   {
