--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1144,6 +1144,47 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   url          = {https://doi.org/10.1038/s41467-022-31138-1},
 }
 
+@Article{ContentoSta2023,
+  author           = {Lorenzo Contento and Paul Stapor and Daniel Weindl and Jan Hasenauer},
+  journal          = {bioRxiv},
+  title            = {A more expressive spline representation for {SBML} models improves code generation performance in {AMICI}},
+  year             = {2023},
+  abstract         = {Spline interpolants are commonly used for discretizing and estimating functions in mathematical models. While splines can be encoded in the Systems Biology Markup Language (SBML) using piecewise functions, the resulting formulas are very complex and difficult to derive by hand. Tools to create such formulas exist but only deal with numeric data and thus cannot be used for function estimation. Similarly, simulation tools suffer from several limitations when handling splines. For example, in the AMICI library splines with large numbers of nodes lead to long model import times. We have developed a set of SBML annotations to mark assignment rules as spline formulas. These compact representations are human-readable and easy to edit, in contrast to the piecewise representation. Different boundary conditions and extrapolation methods can also be specified. By extending AMICI to create and recognize these annotations, model import can be sped up significantly. This allows practitioners to increase the expressivity of their models. While the performance improvement is limited to AMICI, our tools for creating spline formulas can be used for other tools as well and our syntax for compact spline representation may be a starting point for an SBML-native way to represent spline interpolants.Competing Interest StatementThe authors have declared no competing interest.},
+  creationdate     = {2023-07-06T10:25:17},
+  doi              = {10.1101/2023.06.29.547120},
+  elocation-id     = {2023.06.29.547120},
+  eprint           = {https://www.biorxiv.org/content/early/2023/07/01/2023.06.29.547120.full.pdf},
+  modificationdate = {2023-07-06T10:25:30},
+  publisher        = {Cold Spring Harbor Laboratory},
+  url              = {https://www.biorxiv.org/content/early/2023/07/01/2023.06.29.547120},
+}
+
+@InBook{Froehlich2023,
+  author           = {Fr{\"o}hlich, Fabian},
+  editor           = {Nguyen, Lan K.},
+  pages            = {59--86},
+  publisher        = {Springer US},
+  title            = {A Practical Guide for the Efficient Formulation and Calibration of Large, Energy- and Rule-Based Models of Cellular Signal Transduction},
+  year             = {2023},
+  address          = {New York, NY},
+  isbn             = {978-1-0716-3008-2},
+  abstract         = {Aberrant signal transduction leads to complex diseases such as cancer. To rationally design treatment strategies with small molecule inhibitors, computational models have to be employed. Energy- and rule-based models allow the construction of mechanistic ordinary differential equation models based on structural insights. The detailed, energy-based description often generates large models, which are difficult to calibrate on experimental data. In this chapter, we provide a detailed, interactive protocol for the programmatic formulation and calibration of such large, energy- and rule-based models of cellular signal transduction based on an example model describing the action of RAF inhibitors on MAPK signaling. An interactive version of this chapter is available as Jupyter Notebook at github.com/FFroehlich/energy{\_}modeling{\_}chapter.},
+  booktitle        = {Computational Modeling of Signaling Networks},
+  creationdate     = {2023-07-06T10:31:07},
+  doi              = {10.1007/978-1-0716-3008-2_3},
+  modificationdate = {2023-07-06T10:36:35},
+  url              = {https://doi.org/10.1007/978-1-0716-3008-2_3},
+}
+
+@Misc{SluijsZho2023,
+  author           = {Bob van Sluijs and Tao Zhou and Britta Helwig and Mathieu Baltussen and Frank Nelissen and Hans Heus and Wilhelm Huck},
+  title            = {Inverse Design of Enzymatic Reaction Network States},
+  year             = {2023},
+  creationdate     = {2023-07-06T10:39:46},
+  doi              = {10.21203/rs.3.rs-2646906/v1},
+  modificationdate = {2023-07-06T10:40:37},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
